Convert more compilation tests
Update DataBindingCompilationTestCase to support extraction of stdout
and stderr, which is not supported by the AndroidGradleTestCase API.

Test: this is it.
Bug: 173134729

Change-Id: I9fd482b3893b28b448ab7d19dea60a13ac48d646